# python-typing-starter

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/output/reports/: SM01_20260419_125232.html  SM01_20260419_161138.html
data/schema/: 1_prompt.md
data/schema/optimisation_potential/: 1_potential.md  P01.md
data/schema/sub_optimisation_potential/: 1_sub_potential.md  SP01_01.md  SP01_02.md
docs/4_templates/architecture/: TEMP_ADR.md
docs/4_templates/coding_agents/: TEMP_AGENTS.md  TEMP_CLAUDE.md  TEMP_SKILL.md
docs/4_templates/project/: TEMP_PRODUCT.md  TEMP_TECHNICAL.md
src/python_typing_starter/config/: __init__.py  settings.py
src/smi/: main.py
src/smi/adapters/chat_model/: __init__.py  factory.py
src/smi/adapters/chat_model/openai/: __init__.py  chat_model.py
src/smi/adapters/img_provider/: __init__.py  file_system_img_provider.py
src/smi/adapters/pdf_provider/: __init__.py  file_system_pdf_provider.py
src/smi/config/: logging.py  settings.py
src/smi/domain/: __init__.py
src/smi/domain/potentials/: definitions.py  registry.py
src/smi/domain/prompts/: prompt.py
src/smi/domain/schema/: optimisation_potential.py  potential.py  result.py  sub_optimisation_potential.py  sub_potential.py
src/smi/domain/sub_potentials/: __init__.py  p01_definitions.py
src/smi/services/: __init__.py  aggregation.py  assessment.py  knowledge_base.py  report.py
src/smi/templates/: report.html.j2
