# ============================================================
# Template: temp_py
# Zweck:
#   Generische pyproject.toml-Vorlage für Python-Projekte
#   mit setuptools, Tests, Typprüfung, Formatierung und Linting.
#
# Verwendung:
#   - Platzhalter wie <project_name> durch echte Werte ersetzen
#   - Nicht benötigte Abschnitte oder Abhängigkeiten entfernen
# ============================================================

[build-system]
# Build-Werkzeuge, die zum Paketbau benötigt werden
requires = [
  "setuptools>=69",
  "wheel",
  "setuptools-scm>=8",
]

# Build-Backend für moderne Python-Pakete
build-backend = "setuptools.build_meta"


[project]
# Paketname auf PyPI bzw. interner Paketname
name = "smi"

# Fallback-Version; kann bei Bedarf durch setuptools-scm aus Git-Tags kommen
version = "0.1.0"

# Kurzbeschreibung des Projekts
description = ""

# Unterstützte Python-Version
requires-python = ">=3.12"

# Standard-Readme-Datei für Projektbeschreibung
readme = "README.md"

# Autorenliste
authors = [
  { name = "samuel.goetz" }
]

# Schlagworte zur Kategorisierung
keywords = [
  "<keyword_1>",
  "<keyword_2>",
  "<keyword_3>",
]

# Laufzeit-Abhängigkeiten des Projekts
dependencies = [
  # LangChain / LangGraph - v1-Linie
  "langchain>=1.2.13,<2.0",
  "langgraph>=1.1.3,<2.0",

  # Model-Integration
  "langchain-openai>=1.1.12,<2.0",

  # Konfiguration & Datenvalidierung
  "pydantic>=2.9,<3.0",
  "python-dotenv>=1.0,<2.0",

  # HTML-Report
  "jinja2>=3.1,<4.0",
]


[project.optional-dependencies]
# Zusätzliche Abhängigkeiten für Entwicklung, Tests und Qualitätssicherung
dev = [
  # Testen
  "pytest>=9.0.0,<10.0",
  "pytest-asyncio>=1.3.0,<2.0",

  # Typprüfung
  "mypy>=1.19.0,<2.0",

  # Formatierung / Linting
  "black>=25.0.0,<26.0",
  "ruff>=0.14.0,<0.15.0",

  # Paketbau
  "build>=1.2.0",
]


[tool.setuptools]
# Quellcode liegt im src/-Layout
package-dir = { "" = "src" }


[tool.setuptools_scm]
# Fallback-Version, falls keine Git-Tags vorhanden sind
fallback_version = "0.1.0"


[tool.setuptools.packages.find]
# Suche nach Python-Paketen unterhalb von src/
where = ["src"]


[tool.setuptools.package-data]
# Zusätzliche Dateien, die mit ins Paket aufgenommen werden sollen
# Beispiel für Typisierungsmarker bei typed packages
smi = ["py.typed"]


[tool.pytest.ini_options]
# Verzeichnis mit Tests
testpaths = ["tests"]

# Testdateien folgen dem Muster test_*.py
python_files = ["test_*.py"]

# Verbose-Ausgabe aktivieren
addopts = "-v"

# Async-Tests automatisch erkennen
asyncio_mode = "auto"


[tool.mypy]
# Ziel-Python-Version für die Typprüfung
python_version = "3.12"

# Strikte Typprüfung aktivieren
strict = true

# Verzeichnisse/Dateien, die von mypy ignoriert werden sollen
exclude = [
  "^data/",
  "^docs/",
  "^dist/",
  "^build/",
  "^\\.venv/",
  "^\\.mypy_cache/",
]

# Optional: Plugins, z. B. für Pydantic
plugins = [
  # "pydantic.mypy",
]


[tool.black]
# Maximale Zeilenlänge
line-length = 88

# Zielversion von Python
target-version = ["py312"]

# Nur diese Verzeichnisse formatieren
include = "src/|tests/"

# Diese Verzeichnisse ausschließen
exclude = '''
(
  /(\.venv|\.git|\.mypy_cache|dist|build|__pycache__)/
)
'''


[tool.ruff]
# Maximale Zeilenlänge
line-length = 88

# Zielversion von Python
target-version = "py312"

# Zusätzliche Ausschlüsse für Ruff
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
]


[tool.ruff.lint]
# Aktivierte Regelsets:
# E = pycodestyle errors
# F = pyflakes
# I = isort
# B = flake8-bugbear
select = ["E", "F", "I", "B"]

# Ignorierte Regeln
ignore = [
  "E203",
  "E266",
  "E501",
  "B905",
]


[tool.ruff.lint.per-file-ignores]
# Beispiel: bestimmte Regeln in Tests ignorieren
"tests/*" = ["D"]